<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="22sp"
                android:text="@string/app_name_init"
                android:textColor="@color/colorPrimary"/>
            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/login"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="5">
                    <ImageView
                        android:layout_weight="1"
                        android:src="@drawable/ic_user"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_weight="4"
                        android:layout_width="0dp"
                        app:boxBackgroundColor="@android:color/transparent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimary"
                        app:passwordToggleTint="@color/colorPrimary"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_nik"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorLink="@color/colorPrimary"
                            android:textColor="@color/colorPrimary"
                            android:textColorHint="@color/colorPrimary"
                            android:hint="@string/username_hint"
                            android:inputType="textAutoComplete"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:weightSum="5">
                    <ImageView
                        android:layout_weight="1"
                        android:src="@drawable/ic_lock"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_weight="4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        android:textColorHint="@color/colorPrimary"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:passwordToggleTint="@color/colorPrimary"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorLink="@color/colorPrimary"
                            android:textColor="@color/colorPrimary"
                            android:textColorHint="@color/colorPrimary"
                            android:hint="@string/password_text"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_text"
                    android:textColor="#ffffff"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_marginBottom="20dp"
                    android:theme="@style/Theme.MaterialComponents"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>

            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:textSize="12sp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="-"/>
    </RelativeLayout>
</ScrollView>

